fix: Centre align images from WP

--- a/src/App.scss
+++ b/src/App.scss
@@ -97,3 +97,8 @@ $app-width: 900px;
 .bx--data-table-v2-container {
   margin-bottom: 1.5rem;
 }
+
+img.aligncenter {
+  display: block;
+  margin: 0 auto;
+}
